--- a/src/assets/styles/scss/custom/components/mobile/mobileNavigation.scss
+++ b/src/assets/styles/scss/custom/components/mobile/mobileNavigation.scss
@@ -5,7 +5,7 @@ html.mobile-navigation-menu-visible {
     }
 }
 
-.Home, .About {
+.Home, .About, .Error {
     .mobile-navigation-menu {
         background-color: $blue;
         ul.mobile-navigation {
